light working (not sure of direction)

--- a/config/light.jsonc
+++ b/config/light.jsonc
@@ -4,8 +4,8 @@
     {
         "title":"Default Game Window",
         "size":{
-            "width":1920,
-            "height":1080
+            "width":1280,
+            "height":768
         },
         "fullscreen": false
     },
@@ -267,15 +267,23 @@
                 ]
             },
             {
-                "position": [10, 20, 0],
+                "position": [ 10, 10, 0 ],
+                "rotation": [ 0, 0, 0 ],
+                "scale": [ 3, 2, 3 ],
                 "components": [
-                    {
-                        "type": "Light",
-                        "color": [1, 1, 1],
-                        "attenuation": [1, 1, 1],
-                        "lightType": "point",
-                        "coneAngles": [0, 0]
-                    }
+                {
+                    "type": "Mesh Renderer",
+                    "mesh": "sphere",
+                    "material": "moon"
+                },
+                {
+                    "type": "Light",
+                    "color": [0.88, 0.345, 0.13],
+                    "attenuation": [0.1, 0.4, 0.2],
+                    "direction": [-10,-10,0],
+                    "cone_angles": [30, 180],
+                    "lightType": "directional"
+                }
                 ]
             }
         ]
