--- a/config/app.jsonc
+++ b/config/app.jsonc
@@ -182,6 +182,20 @@
                     }
                 ]
             },
+
+            {
+                "position": [-3, 1, 0],
+                "rotation": [-90, 0, 0],
+                "scale": [0.5, 0.5, 0.5],
+                "components": [
+                    {
+                        "type": "Mesh Renderer",
+                        "mesh": "sphere",
+                        "material": "ball"
+                    }
+                ]
+            },
+
             {
                 "position": [0, -1, 0],
                 "rotation": [-90, 0, 0],
