--- a/config/game.jsonc
+++ b/config/game.jsonc
@@ -32,7 +32,6 @@
                 "glass": "assets/textures/glass-panels.png",
                 "monkey": "assets/textures/monkey.png",
                 "ball":"assets/textures/ball.jpg"
-
             },
             "meshes":{
                 "cube": "assets/models/cube.obj",
@@ -141,6 +140,19 @@
                     "tint": [1, 1, 1, 1],
                     "texture": "ball",
                     "sampler": "default"
+                },
+                "enemy": {
+                    "type": "tinted",
+                    "shader": "tinted",
+                    "pipelineState": {
+                        "faceCulling":{
+                            "enabled": false
+                        },
+                        "depthTesting":{
+                            "enabled": true
+                        }
+                    },
+                    "tint": [0.2, 0.2, 1, 1]
                 }
             }
         },
@@ -165,6 +177,10 @@
                                 "type": "Mesh Renderer",
                                 "mesh": "sphere",
                                 "material": "ball"
+                            },
+                            {
+                                "type": "Movement",
+                                "angularVelocity": [-45, 0, 0]
                             }
                         ]
                     }
@@ -270,6 +286,17 @@
                     {
                         "type": "Movement",
                         "angularVelocity": [0, 90, 0]
+                    }
+                ]
+            },
+            {
+                "position": [-5, -0.5, 0],
+                "scale": [1, 0.25, 0.25],
+                "components": [
+                    {
+                        "type": "Mesh Renderer",
+                        "mesh": "cube",
+                        "material": "enemy"
                     }
                 ]
             }
