--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,11 +80,15 @@ set(COMMON_SOURCES
         source/common/components/component-deserializer.hpp
         source/common/components/light.hpp
         source/common/components/light.cpp
+        source/common/components/collision.hpp
+        source/common/components/collision.cpp
 
         source/common/systems/forward-renderer.hpp
         source/common/systems/forward-renderer.cpp
         source/common/systems/free-camera-controller.hpp
         source/common/systems/movement.hpp
+        source/common/systems/collision.hpp
+
 )
 
 # Define the directories in which to search for the included headers
