--- a/config/game.jsonc
+++ b/config/game.jsonc
@@ -165,6 +165,11 @@
                     },
                     {
                         "type": "Free Camera Controller"
+                    },
+                    {
+                        "type": "Collision",
+                        "center": [0, 1, 0, 1],
+                        "radius": 0.5
                     }
                 ],
                 "children": [
@@ -181,6 +186,11 @@
                             {
                                 "type": "Movement",
                                 "angularVelocity": [-45, 0, 0]
+                            },
+                            {
+                                "type": "Collision",
+                                "center": [0, 1, 0, 1],
+                                "radius": 0.5
                             }
                         ]
                     }
@@ -198,6 +208,11 @@
                         "type": "Movement",
                         "linearVelocity": [0, 0.1, 0],
                         "angularVelocity": [0, 45, 0]
+                    },
+                    {
+                        "type": "Collision",
+                        "center": [0, 1, 0, 1],
+                        "radius": 0.5
                     }
                 ]
             },
@@ -210,6 +225,11 @@
                         "type": "Mesh Renderer",
                         "mesh": "plane",
                         "material": "grass"
+                    },
+                    {
+                        "type": "Collision",
+                        "center": [0, 1, 0, 1],
+                        "radius": 0.5
                     }
                 ]
             },
@@ -222,6 +242,11 @@
                         "type": "Mesh Renderer",
                         "mesh": "plane",
                         "material": "glass"
+                    },
+                    {
+                        "type": "Collision",
+                        "center": [0, 1, 0, 1],
+                        "radius": 0.5
                     }
                 ]
             },
@@ -234,6 +259,11 @@
                         "type": "Mesh Renderer",
                         "mesh": "plane",
                         "material": "glass"
+                    },
+                    {
+                        "type": "Collision",
+                        "center": [0, 1, 0, 1],
+                        "radius": 0.5
                     }
                 ]
             },
@@ -246,6 +276,11 @@
                         "type": "Mesh Renderer",
                         "mesh": "plane",
                         "material": "glass"
+                    },
+                    {
+                        "type": "Collision",
+                        "center": [0, 1, 0, 1],
+                        "radius": 0.5
                     }
                 ]
             },
@@ -258,6 +293,11 @@
                         "type": "Mesh Renderer",
                         "mesh": "plane",
                         "material": "glass"
+                    },
+                    {
+                        "type": "Collision",
+                        "center": [0, 1, 0, 1],
+                        "radius": 0.5
                     }
                 ]
             },
@@ -270,6 +310,11 @@
                         "type": "Mesh Renderer",
                         "mesh": "plane",
                         "material": "glass"
+                    },
+                    {
+                        "type": "Collision",
+                        "center": [0, 1, 0, 1],
+                        "radius": 0.5
                     }
                 ]
             },
@@ -290,6 +335,7 @@
                 ]
             },
             {
+                "name":"cube",
                 "position": [-5, -0.5, 0],
                 "scale": [1, 0.25, 0.25],
                 "components": [
@@ -297,6 +343,11 @@
                         "type": "Mesh Renderer",
                         "mesh": "cube",
                         "material": "enemy"
+                    },
+                    {
+                        "type": "Collision",
+                        "center": [0, 1, 0, 1],
+                        "radius": 0.5
                     }
                 ]
             }
