--- a/config/game.jsonc
+++ b/config/game.jsonc
@@ -32,6 +32,7 @@
                 "glass": "assets/textures/glass-panels.png",
                 "monkey": "assets/textures/monkey.png",
                 "ball":"assets/textures/ball.jpg"
+                
             },
             "meshes":{
                 "cube": "assets/models/cube.obj",
@@ -337,7 +338,7 @@
             {
                 "name":"cube",
                 "position": [-5, -0.5, 0],
-                "scale": [1, 0.25, 0.25],
+                "scale": [1.5, 0.25, 0.5],
                 "components": [
                     {
                         "type": "Mesh Renderer",
@@ -349,8 +350,28 @@
                         "center": [0, 1, 0, 1],
                         "radius": 0.5
                     }
+                ],
+                "children": [
+                    {
+                        "name":"transparentBlock",
+                        "position": [0, 1, 0],
+                        "scale": [0.75, 0.5, 0.75],
+                        "components": [
+                            {
+                                "type": "Mesh Renderer",
+                                "mesh": "cube",
+                                "material": "glass"
+                            },
+                            {
+                                "type": "Collision",
+                                "center": [0, 1, 0, 1],
+                                "radius": 0.5
+                            }
+                        ]
+                    }
                 ]
             }
+            
         ]
     }
 }
