--- a/config/game.jsonc
+++ b/config/game.jsonc
@@ -175,6 +175,7 @@
                 ],
                 "children": [
                     {
+                        "name": "player",
                         "position": [0, -2, -5],
                         "rotation": [-90, 0, 0],
                         "scale": [0.5, 0.5, 0.5],
