--- a/config/game.jsonc
+++ b/config/game.jsonc
@@ -33,7 +33,8 @@
                 "monkey": "assets/textures/monkey.png",
                 "ball":"assets/textures/ball.jpg",
                 "box":"assets/textures/box.jpg",
-                "ground":"assets/textures/ground.jpg"
+                "ground":"assets/textures/ground.jpg",
+                "door": "assets/textures/door.jpg"
                 
             },
             "meshes":{
@@ -61,6 +62,23 @@
                         }
                     },
                     "tint": [0.45, 0.4, 0.5, 1]
+                },
+                "door":{
+                    "type": "textured",
+                    "shader": "textured",
+                    "pipelineState": {
+                        "faceCulling":{
+                            "enabled": false
+                        },
+                        "depthTesting":{
+                            "enabled": true
+                        },
+                        
+                        "depthMask": false
+                    },
+                    "tint": [1, 1, 1, 1],
+                    "texture": "door",
+                    "sampler": "pixelated"
                 },
                 "glass":{
                     "type": "textured",
@@ -199,6 +217,23 @@
                                 "radius": 0.5
                             }
                         ]
+                    }
+                ]
+            },
+            {
+                "name": "door",
+                "position": [-5.25, -1, -40],
+                "scale": [4, 15, 0.5],
+                "components": [
+                    {
+                        "type": "Mesh Renderer",
+                        "mesh": "plane",
+                        "material": "enemy"
+                    },
+                    {
+                        "type": "Collision",
+                        "center": [0, 1, 0, 1],
+                        "radius": 10
                     }
                 ]
             },
