--- a/config/light.jsonc
+++ b/config/light.jsonc
@@ -281,7 +281,8 @@
                     "color": [1, 1, 1],
                     "attenuation": [0.1, 0.4, 0.2],
                     "cone_angles": [30, 180],
-                    "lightType": "directional"
+                    "direction": [0, -1, 0],
+                    "lightType": "spot"
                 }
                 ]
             }
