added new texture maps

--- a/config/game_light.jsonc
+++ b/config/game_light.jsonc
@@ -46,7 +46,8 @@
                 "cube": "assets/models/cube.obj",
                 "monkey": "assets/models/monkey.obj",
                 "plane": "assets/models/plane.obj",
-                "sphere": "assets/models/sphere.obj"
+                "sphere": "assets/models/sphere.obj",
+                "smooth-sphere": "assets/models/smooth-sphere.obj"
             },
             "samplers":{
                 "default":{},
@@ -210,22 +211,21 @@
                     {
                         "name": "player",
                         "position": [0, -2, -5],
-                        "rotation": [-90, 0, 0],
+                        "rotation": [0, 0, 0],
                         "scale": [0.5, 0.5, 0.5],
                         "components": [
                             {
                                 "type": "Mesh Renderer",
-                                "mesh": "sphere",
+                                "mesh": "smooth-sphere",
                                 "material": "ball"
-                            },
-                            {
-                                "type": "Movement",
-                                "angularVelocity": [-45, 0, 0]
                             },
                             {
                                 "type": "Collision",
                                 "center": [0, 1, 0, 1],
                                 "radius": 0.5
+                            },
+                            {
+                                "type": "Movement"
                             }
                         ]
                     }
@@ -710,22 +710,21 @@
                 ]
             },
             {
-                "position": [ 10, 10, 0 ],
+                "position": [ 5, 2, 0 ],
                 "rotation": [ 0, 0, 0 ],
                 "scale": [ 3, 2, 3 ],
                 "components": [
                 {
                     "type": "Mesh Renderer",
-                    "mesh": "sphere",
-                    "material": "moon"
+                    "mesh": "smooth-sphere",
+                    "material": "monkey"
                 },
                 {
                     "type": "Light",
                     "color": [0.5, 1, 1],
                     "attenuation": [0.1, 0.1, 0.1],
                     "cone_angles": [30, 180],
-                    "direction": [0, -1, 0],
-                    "lightType": "point"
+                    "lightType": "directional"
                 }
                 ]
             }
