finished light configs

--- a/config/all_light.jsonc
+++ b/config/all_light.jsonc
@@ -803,6 +803,25 @@
                     "lightType": "spot"
                 }
                 ]
+            },
+            {
+                "position": [ 2, -0.5, 0],
+                "rotation": [ 0, 0, 0 ],
+                "scale": [ 0.5, 0.5, 0.5 ],
+                "components": [
+                {
+                    "type": "Mesh Renderer",
+                    "mesh": "smooth-sphere",
+                    "material": "light-bulb"
+                },
+                {
+                    "type": "Light",
+                    "color": [0.74, 0.67, 0.3],
+                    "attenuation": [0.1, 0.1, 0.0],
+                    "cone_angles": [30, 180],
+                    "lightType": "directional"
+                }
+                ]
             }
         ]
     }
